tests/fixtures/fail/copy_nominal_invalid_enum_impl.sc
let Payload = struct(value: i32)

let Message = enum {
  Data(Payload),
  Empty,
}

extend Message: Copy {}

let main(): i32 = 42
